# autoriteit

esp_motor_driver_server/: platformio.ini
esp_motor_driver_server/data/: index.html  script.js
esp_motor_driver_server/src/: ESP8266_Stepper_Motor_Websocket.ino
tracker/: pyproject.toml  tracker.py  travel.py
